--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.48.2"
+    "react-hook-form": "^7.48.2",
+    "react-textarea-autosize": "^8.5.3"
   },
   "devDependencies": {
     "@types/node": "^20",
