--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/input": "^2.1.17",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.1.4",
@@ -29,6 +27,7 @@
     "react-hook-form": "^7.48.2",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
