--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.10.0",
   "private": false,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -19,11 +19,11 @@
     "install": "^0.13.0",
     "lucide-react": "^0.303.0",
     "mongodb": "^6.3.0",
-    "next": "14.0.1",
+    "next": "15.0.4",
     "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.48.2",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
@@ -32,14 +32,18 @@
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.1",
     "@types/react-transition-group": "^4.4.10",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.1",
+    "eslint-config-next": "15.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.1"
   }
 }
